add update gem purchase api spec
